// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect render renders TreeNode correctly 1`] = `
<div
  id="TriggerContainer"
>
  <span
    class="rc-tree-select rc-tree-select-enabled"
  >
    <span
      aria-autocomplete="list"
      aria-haspopup="true"
      class="rc-tree-select-selection
                rc-tree-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <span
        class="rc-tree-select-selection__rendered"
      >
        <span
          class="rc-tree-select-selection__placeholder"
        />
      </span>
      <span
        class="rc-tree-select-arrow"
        style="outline:none;"
      >
        <b />
      </span>
    </span>
  </span>
</div>
`;

exports[`TreeSelect render renders correctly 1`] = `
<div
  id="TriggerContainer"
>
  <span
    class="forTest awesome awesome-enabled"
    style="width:300px;"
  >
    <span
      aria-autocomplete="list"
      aria-haspopup="true"
      class="awesome-selection
                awesome-selection--multiple"
      role="combobox"
    >
      <ul
        class="awesome-selection__rendered"
      >
        <li
          class="awesome-search awesome-search--inline"
        >
          <span
            class="awesome-search__field__wrap"
          >
            <input
              class="awesome-search__field"
              role="textbox"
              value=""
            />
          </span>
        </li>
      </ul>
    </span>
  </span>
</div>
`;

exports[`TreeSelect render renders disabled correctly 1`] = `
<div
  id="TriggerContainer"
>
  <span
    class="rc-tree-select rc-tree-select-disabled"
  >
    <span
      aria-autocomplete="list"
      aria-haspopup="true"
      class="rc-tree-select-selection
                rc-tree-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <span
        class="rc-tree-select-selection__rendered"
      >
        <span
          class="rc-tree-select-selection__placeholder"
        />
      </span>
      <span
        class="rc-tree-select-arrow"
        style="outline:none;"
      >
        <b />
      </span>
    </span>
  </span>
</div>
`;

exports[`TreeSelect render renders tree correctly 1`] = `
<div
  id="TriggerContainer"
>
  <span
    class="rc-tree-select rc-tree-select-enabled"
  >
    <span
      aria-autocomplete="list"
      aria-haspopup="true"
      class="rc-tree-select-selection
                rc-tree-select-selection--multiple"
      role="combobox"
    >
      <ul
        class="rc-tree-select-selection__rendered"
      >
        <li
          class="rc-tree-select-search rc-tree-select-search--inline"
        >
          <span
            class="rc-tree-select-search__field__wrap"
          >
            <input
              class="rc-tree-select-search__field"
              role="textbox"
              value=""
            />
          </span>
        </li>
      </ul>
    </span>
  </span>
</div>
`;

exports[`TreeSelect render renders treeDataSimpleMode correctly 1`] = `
<div
  id="TriggerContainer"
>
  <span
    class="rc-tree-select rc-tree-select-enabled"
  >
    <span
      aria-autocomplete="list"
      aria-haspopup="true"
      class="rc-tree-select-selection
                rc-tree-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <span
        class="rc-tree-select-selection__rendered"
      >
        <span
          class="rc-tree-select-selection__placeholder"
        />
      </span>
      <span
        class="rc-tree-select-arrow"
        style="outline:none;"
      >
        <b />
      </span>
    </span>
  </span>
</div>
`;

exports[`TreeSelect search nodes renders search input 1`] = `
<div
  id="TriggerContainer"
>
  <span
    class="rc-tree-select rc-tree-select-enabled"
  >
    <span
      aria-autocomplete="list"
      aria-haspopup="true"
      class="rc-tree-select-selection
                rc-tree-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <span
        class="rc-tree-select-selection__rendered"
      >
        <span
          class="rc-tree-select-selection__placeholder"
        />
      </span>
      <span
        class="rc-tree-select-arrow"
        style="outline:none;"
      >
        <b />
      </span>
    </span>
  </span>
</div>
`;
